; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-mx3/extr_mx31pdk.c_mx31pdk_expio_irq_handler.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-mx3/extr_mx31pdk.c_mx31pdk_expio_irq_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.irq_desc = type { i32 }

@CPLD_INT_MASK_REG = common dso_local global i32 0, align 4
@CPLD_INT_STATUS_REG = common dso_local global i32 0, align 4
@MXC_EXP_IO_BASE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.irq_desc*)* @mx31pdk_expio_irq_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mx31pdk_expio_irq_handler(i32 %0, %struct.irq_desc* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.irq_desc*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store %struct.irq_desc* %1, %struct.irq_desc** %4, align 8
  %8 = load i32, i32* @CPLD_INT_MASK_REG, align 4
  %9 = call i32 @__raw_readw(i32 %8)
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* @CPLD_INT_STATUS_REG, align 4
  %11 = call i32 @__raw_readw(i32 %10)
  %12 = load i32, i32* %5, align 4
  %13 = xor i32 %12, -1
  %14 = and i32 %11, %13
  store i32 %14, i32* %6, align 4
  %15 = load i32, i32* @MXC_EXP_IO_BASE, align 4
  store i32 %15, i32* %7, align 4
  br label %16

16:                                               ; preds = %27, %2
  %17 = load i32, i32* %6, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %32

19:                                               ; preds = %16
  %20 = load i32, i32* %6, align 4
  %21 = and i32 %20, 1
  %22 = icmp eq i32 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %19
  br label %27

24:                                               ; preds = %19
  %25 = load i32, i32* %7, align 4
  %26 = call i32 @generic_handle_irq(i32 %25)
  br label %27

27:                                               ; preds = %24, %23
  %28 = load i32, i32* %6, align 4
  %29 = ashr i32 %28, 1
  store i32 %29, i32* %6, align 4
  %30 = load i32, i32* %7, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* %7, align 4
  br label %16

32:                                               ; preds = %16
  ret void
}

declare dso_local i32 @__raw_readw(i32) #1

declare dso_local i32 @generic_handle_irq(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
